--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta th:name="${_csrf.parameterName}" th:content="${_csrf.token}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.3.5/split.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link rel="stylesheet"
-          href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
-    </script>-->
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <script th:src="@{/js/jquery-3.4.1.min.js}"></script>
+    <script th:src="@{/js/split.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <script th:src="@{/js/main.js}"></script>
     <title>Weightlifting Log Home</title>
 </head>
 <body>
 <div id="main-container">
     <div id="top-container">
-        <div id="logo-container" onclick="location.href = 'http://localhost:8080/wl/'"
+        <div id="logo-container" onclick="location.href = 'http://localhost:8080/wl/';"
              style="display: block;">
 
             <!--Title and logo section-->
@@ -70,7 +67,7 @@
                                min="1" max="300" value="150"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('squat-weight',this.value,
-                               'squat-weight','squat-reps','squat-max')"><br/>
+                               'squat-weight','squat-reps','squat-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="squat-reps-slider">Reps</label>
@@ -78,7 +75,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('squat-reps',this.value,
-                               'squat-weight','squat-reps','squat-max')"><br/>
+                               'squat-weight','squat-reps','squat-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -88,7 +85,7 @@
                                            value="150" min="1"
                                            max="300" step="0.5"
                                            oninput="updateGS('squat-weight-slider',
-                                           this.value,'squat-weight','squat-reps','squat-max')">
+                                           this.value,'squat-weight','squat-reps','squat-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -96,7 +93,7 @@
                                 <td><input type="number" name="squat-reps" id="squat-reps" value="1"
                                            min="1" max="19"
                                            oninput="updateGS('squat-reps-slider',
-                                           this.value,'squat-weight','squat-reps','squat-max')">
+                                           this.value,'squat-weight','squat-reps','squat-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -115,7 +112,7 @@
                                min="1" max="250" value="125"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('bench-weight',
-                               this.value,'bench-weight','bench-reps','bench-max')"><br/>
+                               this.value,'bench-weight','bench-reps','bench-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="bench-reps-slider">Reps</label>
@@ -123,7 +120,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('bench-reps',
-                               this.value,'bench-weight','bench-reps','bench-max')"><br/>
+                               this.value,'bench-weight','bench-reps','bench-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -133,7 +130,7 @@
                                            value="125" min="1"
                                            max="250" step="0.5"
                                            oninput="updateGS('bench-weight-slider',
-                                           this.value,'bench-weight','bench-reps','bench-max')">
+                                           this.value,'bench-weight','bench-reps','bench-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -141,7 +138,7 @@
                                 <td><input type="number" name="bench-reps" id="bench-reps" value="1"
                                            min="1" max="19"
                                            oninput="updateGS('bench-reps-slider',
-                                           this.value,'bench-weight','bench-reps','bench-max')">
+                                           this.value,'bench-weight','bench-reps','bench-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -161,7 +158,7 @@
                                value="175"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('deadlift-weight',this.value,
-                               'deadlift-weight','deadlift-reps','deadlift-max')"><br/>
+                               'deadlift-weight','deadlift-reps','deadlift-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="deadlift-reps-slider">Reps</label>
@@ -170,7 +167,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('deadlift-reps',this.value,
-                               'deadlift-weight','deadlift-reps','deadlift-max')"><br/>
+                               'deadlift-weight','deadlift-reps','deadlift-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -180,7 +177,7 @@
                                            value="175" min="1"
                                            max="350" step="0.5"
                                            oninput="updateGS('deadlift-weight-slider',
-                                           this.value,'deadlift-weight','deadlift-reps','deadlift-max')">
+                                           this.value,'deadlift-weight','deadlift-reps','deadlift-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -188,7 +185,7 @@
                                 <td><input type="number" name="deadlift-reps" id="deadlift-reps"
                                            value="1" min="1" max="19"
                                            oninput="updateGS('deadlift-reps-slider',
-                                           this.value,'deadlift-weight','deadlift-reps','deadlift-max')">
+                                           this.value,'deadlift-weight','deadlift-reps','deadlift-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -208,7 +205,7 @@
                                value="75"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('military-weight',this.value,
-                               'military-weight','military-reps','military-max')"><br/>
+                               'military-weight','military-reps','military-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="military-reps-slider">Reps</label>
@@ -217,7 +214,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('military-reps',this.value,
-                               'military-weight','military-reps','military-max')"><br/>
+                               'military-weight','military-reps','military-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -227,7 +224,7 @@
                                            value="75" min="1"
                                            max="150" step="0.5"
                                            oninput="updateGS('military-weight-slider',this.value,
-                                           'military-weight','military-reps','military-max')">
+                                           'military-weight','military-reps','military-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -235,7 +232,7 @@
                                 <td><input type="number" name="military-reps" id="military-reps"
                                            value="1" min="1" max="19"
                                            oninput="updateGS('military-reps-slider',this.value,
-                                           'military-weight','military-reps','military-max')">
+                                           'military-weight','military-reps','military-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -254,7 +251,7 @@
                                max="200" value="100"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('row-weight',this.value,
-                               'row-weight','row-reps','row-max')"><br/>
+                               'row-weight','row-reps','row-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="row-reps-slider">Reps</label>
@@ -262,7 +259,7 @@
                                max="19" value="1" step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('row-reps',
-                               this.value,'row-weight','row-reps','row-max')"><br/>
+                               this.value,'row-weight','row-reps','row-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -272,7 +269,7 @@
                                            value="100" min="1"
                                            max="200" step="0.5"
                                            oninput="updateGS('row-weight-slider',
-                                           this.value,'row-weight','row-reps','row-max')">
+                                           this.value,'row-weight','row-reps','row-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -280,7 +277,7 @@
                                 <td><input type="number" name="row-reps" id="row-reps" value="1"
                                            min="1" max="19"
                                            oninput="updateGS('row-reps-slider',
-                                           this.value,'row-weight','row-reps','row-max')">
+                                           this.value,'row-weight','row-reps','row-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -298,7 +295,7 @@
                                min="1" max="150" value="75"
                                step="0.5" class="slider overall-strength-weight"
                                oninput="updateGS('pullup-weight',
-                               this.value,'pullup-weight','pullup-reps','pullup-max')"><br/>
+                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br/>
                     </div>
                     <div class="overall-strength-reps">
                         <label class="bigger-label" for="pullup-reps-slider">Reps</label>
@@ -307,7 +304,7 @@
                                step="1"
                                class="slider overall-strength-reps"
                                oninput="updateGS('pullup-reps',
-                               this.value,'pullup-weight','pullup-reps','pullup-max')"><br/>
+                               this.value,'pullup-weight','pullup-reps','pullup-max');"><br/>
                     </div>
                     <div class="overall-strength-text-inputs">
                         <table class="overall-strength-table">
@@ -317,7 +314,7 @@
                                            value="75" min="1"
                                            max="150" step="0.5"
                                            oninput="updateGS('pullup-weight-slider',
-                                           this.value,'pullup-weight','pullup-reps','pullup-max')">
+                                           this.value,'pullup-weight','pullup-reps','pullup-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -325,7 +322,7 @@
                                 <td><input type="number" name="pullup-reps" id="pullup-reps"
                                            value="1" min="1" max="19"
                                            oninput="updateGS('pullup-reps-slider',
-                                           this.value,'pullup-weight','pullup-reps','pullup-max')">
+                                           this.value,'pullup-weight','pullup-reps','pullup-max');">
                                 </td>
                             </tr>
                             <tr>
@@ -349,9 +346,9 @@
                     <label class="bigger-label" for="weight">Weight lifted</label>
                     <input name="weight" id="weight" type="range" min="1" max="200" value="100"
                            class="slider" step="0.5"
-                           oninput="update('weight-text',this.value)"><br/>
+                           oninput="update('weight-text',this.value);"><br/>
                     <label for="weight-text"></label><input type="text" id="weight-text" value="100"
-                                                            oninput="update('weight',this.value)">
+                                                            oninput="update('weight',this.value);">
                 </div>
                 <br/>
 
@@ -360,15 +357,15 @@
                     <label class="bigger-label" for="reps">Number of reps</label>
                     <input name="reps" id="reps" type="range" min="1" max="19" value="10"
                            class="slider" step="1"
-                           oninput="update('reps-text',this.value)"><br/>
+                           oninput="update('reps-text',this.value);"><br/>
                     <label for="reps-text"></label><input type="text" id="reps-text" value="10"
-                                                          oninput="update('reps',this.value)">
+                                                          oninput="update('reps',this.value);">
                 </div>
                 <br/>
                 <div>
                     <label class="bigger-label" for="result">1 Rep Max:</label>
                     <input id="result" type="text" value="" readonly>
-                    <button class="my-button" type="button" onclick="calculate1RM()">
+                    <button class="my-button" type="button" onclick="calculate1RM();">
                         Calculate
                     </button>
                 </div>
